<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:cnb_iconColor="@color/main_color"
        app:cnb_textColor="@color/main_color" />

    <item
        android:id="@+id/navigation_favourites"
        android:icon="@drawable/ic_bookmark"
        android:title="@string/favourites"
        app:cnb_iconColor="@color/main_color"
        app:cnb_textColor="@color/main_color" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        app:cnb_iconColor="@color/main_color"
        app:cnb_textColor="@color/main_color" />

</menu>