<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@drawable/edit_text_shape_clicked"
    app:layoutDescription="@xml/bottom_sheet_fragment_scene"
    tools:context=".screens.bottom_nav.profile.bottom_sheet.BottomSheetFragment">

    <Button
        android:id="@+id/submitButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/proxima_black"
        android:text="@string/find"
        android:textAllCaps="false"
        android:textSize="17sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/signOut"
        app:layout_constraintEnd_toEndOf="@+id/goOnIdButton"
        app:layout_constraintStart_toEndOf="@+id/idInput" />

    <View
        android:id="@+id/view2"
        android:layout_width="40dp"
        android:layout_height="3dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/placeholder_shape"
        app:layout_constraintBottom_toTopOf="@+id/resetBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/resetBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/proxima_black"
        android:text="@string/reset_pin"
        android:textAllCaps="false"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/clearFav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/clearFav"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/proxima_black"
        android:text="@string/clear_favourites"
        android:textAllCaps="false"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/goOnIdButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/goOnIdButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/proxima_black"
        android:text="@string/go_on_movie_id"
        android:textAllCaps="false"
        android:textSize="17sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/submitButton"
        app:layout_constraintEnd_toEndOf="@+id/resetBtn"
        app:layout_constraintStart_toStartOf="@+id/resetBtn" />

    <Button
        android:id="@+id/signOut"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/proxima_black"
        android:text="@string/sign_out"
        android:textAllCaps="false"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/idInput"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/costum_input"
        android:ems="10"
        android:gravity="center"
        android:fontFamily="@font/montera_bold"
        android:inputType="number"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/submitButton"
        app:layout_constraintEnd_toStartOf="@+id/submitButton"
        app:layout_constraintStart_toStartOf="@+id/goOnIdButton"
        app:layout_constraintTop_toTopOf="@+id/submitButton" />

</androidx.constraintlayout.motion.widget.MotionLayout>