<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary_color"
    tools:context=".screens.auth.login.security.SecurityScreenFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="45dp"
        android:maxHeight="348dp"
        app:layout_constraintBottom_toTopOf="@+id/resetButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/indicatorHolder" />

    <View
        android:id="@+id/viewDisableLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/recycler"
        app:layout_constraintEnd_toEndOf="@+id/recycler"
        app:layout_constraintStart_toStartOf="@+id/recycler"
        app:layout_constraintTop_toTopOf="@+id/recycler" />

    <TextView
        android:id="@+id/title_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/montera_bold"
        android:text="@string/security_screen"
        android:textColor="@color/main_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/indicatortitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/montera_bold"
        android:text="@string/enter_your_passcode"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_page" />

    <TextView
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/montera_bold"
        android:text="@string/forgot_password"
        android:textColor="@color/main_color"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/indicatorHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="90dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/indicatortitle">

        <View
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_marginStart="23dp"
            android:layout_marginEnd="23dp"
            android:background="@drawable/number_button_shape" />

        <View
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_marginStart="23dp"
            android:layout_marginEnd="23dp"
            android:background="@drawable/number_button_shape" />

        <View
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_marginStart="23dp"
            android:layout_marginEnd="23dp"
            android:background="@drawable/number_button_shape" />

        <View
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_marginStart="23dp"
            android:layout_marginEnd="23dp"
            android:background="@drawable/number_button_shape" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>