<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary_color_tale"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".ui.single_movie.SingleMovieFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.single_movie.SingleMovieFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/actorsRecycler"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:orientation="horizontal"
            android:overScrollMode="never"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/castTv" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/backgroundPoster"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@color/gray_blue"
            android:foreground="@drawable/foreground_gradient"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_launcher_foreground" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmerLayout"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shimmer_auto_start="true"
            app:shimmer_tilt="20">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@color/gray"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/ic_launcher_foreground" />

        </com.facebook.shimmer.ShimmerFrameLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.27" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="120dp"
            android:layout_height="160dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            app:cardCornerRadius="18dp"
            app:cardElevation="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/backgroundPoster"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backgroundPoster">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/posterImg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/gray_blue"
                android:scaleType="centerCrop"
                tools:src="@drawable/ic_launcher_background" />

        </androidx.cardview.widget.CardView>

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmerPosterLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:elevation="500dp"
            app:layout_constraintBottom_toBottomOf="@+id/cardView"
            app:layout_constraintEnd_toEndOf="@+id/cardView"
            app:layout_constraintStart_toStartOf="@+id/cardView"
            app:layout_constraintTop_toTopOf="@+id/cardView"
            app:shimmer_duration="700">

            <androidx.cardview.widget.CardView
                android:layout_width="120dp"
                android:layout_height="160dp"
                app:cardCornerRadius="18dp"
                app:cardElevation="45dp"
                app:layout_constraintBottom_toBottomOf="@+id/backgroundPoster"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/backgroundPoster">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/gray"
                    android:scaleType="centerCrop" />


            </androidx.cardview.widget.CardView>

        </com.facebook.shimmer.ShimmerFrameLayout>

        <TextView
            android:id="@+id/imdbTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/placeholder_shape"
            android:fontFamily="@font/proxima_extra_bold"
            android:paddingStart="12dp"
            android:paddingTop="3dp"
            android:paddingEnd="12dp"
            android:paddingBottom="3dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/backgroundPoster"
            app:layout_constraintStart_toStartOf="@+id/titleTv"
            tools:text="7.2" />

        <TextView
            android:id="@+id/titleTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/proxima_black"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@+id/cardView"
            app:layout_constraintTop_toBottomOf="@+id/backgroundPoster" />

        <TextView
            android:id="@+id/languageTv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:drawablePadding="10dp"
            android:fontFamily="@font/montera_regular"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:drawableStartCompat="@drawable/ic_global"
            app:layout_constraintStart_toStartOf="@+id/titleTv"
            app:layout_constraintTop_toBottomOf="@+id/titleTv" />

        <TextView
            android:id="@+id/yearTv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:drawablePadding="10dp"
            android:fontFamily="@font/montera_regular"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:drawableStartCompat="@drawable/ic_calendar"
            app:layout_constraintStart_toStartOf="@+id/languageTv2"
            app:layout_constraintTop_toBottomOf="@+id/languageTv2" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ageLimit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:src="@drawable/ic_age_limit"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <TextView
            android:id="@+id/descriptionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/proxima_black"
            android:text="@string/description"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/cardView"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <TextView
            android:id="@+id/descriptionTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:fontFamily="@font/montera_regular"
            android:textColor="@color/gray_blue"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/descriptionTitle"
            app:layout_constraintTop_toBottomOf="@+id/descriptionTitle" />

        <TextView
            android:id="@+id/similarTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/proxima_black"
            android:text="@string/similar"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="@+id/descriptionTitle"
            app:layout_constraintTop_toBottomOf="@id/separator2" />

        <TextView
            android:id="@+id/castTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/proxima_black"
            android:text="@string/actors"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="@+id/descriptionTitle"
            app:layout_constraintTop_toBottomOf="@+id/descriptionTv" />

        <View
            android:id="@+id/separator2"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginTop="10dp"
            android:background="@color/secondary_color"
            app:layout_constraintTop_toBottomOf="@+id/actorsRecycler" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/similarRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:overScrollMode="never"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/similarTv" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/toFavButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/placeholder_shape"
            android:elevation="50dp"
            android:padding="8dp"
            android:src="@drawable/ic_fav_passive"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/transparent"
            android:elevation="50dp"
            android:src="@drawable/ic_previous"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>